# xlog

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  getopt.c
cmake/: compiler_options.cmake  platform_check.cmake  utilities.cmake
doc/: bash-auto-compeletion.sh
doc/ANSI escape code/: ANSI escape code - Wikipedia.html
doc/ANSI escape code/ANSI escape code - Wikipedia_files/: load(1).php  load.php
examples/: bench-multi-threads.c  bench-printers.c  bench_helper.c  bench_helper.h  cov-autobuf.c  cov-not-default-context.c  cov-payload.c  cov-plugins.c  cov-printer.c  cov-shell.c  cov-xlog-not-default-context.c  demo-hexd.c  demo-xlog.c  xlog_builder.x  xlog_list.h
include/: getopt.h
include/xlog/: xlog.h  xlog_config.h.in  xlog_debug.h  xlog_helper.h  xlog_payload.h
include/xlog/plugins/: autobuf.h  bitops.h  family_tree.h  getopt.h  hexdump.h  ringbuf.h
xlog/: CMakeLists.txt  internal.h  xlog.c  xlog_payload.c  xlog_printer.c  xlog_shell.c
xlog/internal/: basic-file-printer.c  daily-file-printer.c  ringbuf-printer.c  ringbuf.c  ringbuf.h  rotating-file-printer.c  stdio-printer.c  xlog.h  xlog_alloc.c  xlog_hexdump.c  xlog_hexdump.h  xlog_tree.c  xlog_tree.h  xlog_vsnprintf.c
xlog/internal/ringbuf/: ringbuf-test.c  ringbuf.c  ringbuf.h
xlog/plugins/: autobuf.c  family_tree.c  family_tree.h  getopt.c  hexdump.c  hexdump.h  ringbuf.c  ringbuf.h
xlog/printers/: file-basic.c  file-daily.c  file-rotating.c  ringbuf-stdout.c  stdio-basic.c  stdio-ringbuf.c
